# n5geh.data_models

./: LICENSE  pyproject.toml  readme.md
digihast_data_model/: datenmodell.ipynb  readme.md
digihast_data_model/schemes/: bf_schema.json  bj_schema.json  bp_schema.json  bs_schema.json  bt_schema.json  ihast_schema.json  iknoten_schema.json
e3_data_model/: e3_data_modell.ipynb  readme.md
e3_data_model/schemes/: dhw_station_schema.json  heat_meter_schema.json  heat_transfer_station_schema.json  heating_circuit_schema.json  thermal_storage_schema.json
tweflex_data_model/: readme.md  twe_flex_data_modell.ipynb
tweflex_data_model/schemes/: dhw_calculation_schema.json  dhw_distribution_schema.json  dhw_measuring_section_schema.json  dhw_storage_schema.json  heat_meter_schema.json  temperature_maintenance_band_schema.json
