[tool.poetry]
name = "n5geh.data_models"
version = "0.0.1"
description = "Documentation of data models used in N5GEH "
authors = ["Martin Altenburger <martin.altenburger@tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
toml = "^0.10.0"
typed-ast = "^1.5.4"
typing-extensions = "^4.4.0"
ipykernel = "^6.25.2"
pydantic = "^2.3.0"
filip = "^0.4.1"
notebook = "^7.1.3"
